spacing fixed

--- a/public/assets/css/modules/landing_page/bt-second-article-section.css
+++ b/public/assets/css/modules/landing_page/bt-second-article-section.css
@@ -3,11 +3,11 @@
 }
 
 .bt-second-section-article .row .row {
-    margin-bottom: calc(3rem + var(--bt-spacing));
+    margin-bottom: var(--bt-spacing);
 }
 
 .bt-second-section-article {
-    margin-top: calc(3rem + var(--bt-spacing)) !important;
+    margin-top: var(--bt-spacing) !important;
 }
 
 .bt-section-article {
@@ -23,6 +23,8 @@
     color: var(--bt-main-white);
     flex-direction: column;
     margin-bottom: 0;
+    margin-top: 3rem;
+    color: black
 }
 /*
 .bt-card-section2 {
@@ -64,10 +66,6 @@
     color: var(--bt-main-white) !important;
 }
 
-.bt-card-section2 {
-    color: black
-}
-
 .bt-card-section2 h3 {
     display: none;
 }
@@ -91,9 +89,9 @@
 
 @media (width <= 740px) {
     .bt-card-section2 {
-        margin-top: 5rem;
         width: 100%;
         flex-direction: column;
+        margin-bottom: 0;
     }
 
     .bt-card-section2 img {
@@ -113,11 +111,4 @@
         padding: 2rem 1.2rem;
     }
 
-    .bt-second-section-article .row .row {
-
-    }
-
-    .bt-card-section2:first-of-type {
-        margin-top: 0;
-    }
 }
